--- a/index.html
+++ b/index.html
@@ -1,10 +1,74 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Connor's Cool Corner</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>My Portfolio</title>
+<style>
+  body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-color: #121212; /* Dark background */
+    color: #ffffff; /* Light text */
+  }
+  #sidebar {
+    width: 250px;
+    height: 100vh;
+    background-color: #1f1f1f; /* Slightly lighter dark shade for the sidebar */
+    float: left;
+    padding: 20px;
+  }
+  #main-content {
+    margin-left: 250px;
+    padding: 20px;
+  }
+  .tab {
+    color: #c7c7c7; /* Grey color for tabs */
+    padding: 10px;
+    margin-bottom: 10px;
+    cursor: pointer;
+  }
+  .tab:hover {
+    background-color: #333333; /* Dark hover effect */
+  }
+  #headshot {
+    width: 100px;
+    height: 100px;
+    margin-bottom: 20px;
+  }
+</style>
 </head>
 <body>
-  <h1>Sup</h1>
-  <p>Aint this ugly</p>
+
+  <div id="sidebar">
+    <!-- Replace the div with an img tag -->
+    <img id="headshot" src="Headshot.jpg" alt="Headshot"> <!-- Headshot image -->
+    <div class="tab" onclick="changeContent('projects')">Projects</div>
+    <div class="tab" onclick="changeContent('about')">About Me</div>
+    <div class="tab" onclick="changeContent('contact')">Contact</div>
+    <!-- Add more tabs as needed -->
+  </div>
+
+<div id="main-content">
+  <h1>Welcome to My Portfolio</h1>
+  <p>Content from selected tab will be displayed here.</p>
+  <!-- Content will change based on the active tab -->
+</div>
+
+<script>
+  // Content for each tab
+  var content = {
+    'projects': '<h2>Projects</h2><p>Details about my projects...</p>',
+    'about': '<h2>About Me</h2><p>A little bit about myself...</p>',
+    'contact': '<h2>Contact</h2><p>How to reach me...</p>'
+    // Add more content for additional tabs as needed
+  };
+
+  // Function to change content
+  function changeContent(tab) {
+    document.getElementById('main-content').innerHTML = content[tab];
+  }
+</script>
+
 </body>
 </html>
